# gr-aff3ct_codes

./: CMakeLists.txt  H_matrix_dvbs2_r1_2_k32400.alist  MANIFEST.md  README.md
.conda/: README.md
aff3ct-3.0.2_Library_Header_Files/: cli.hpp
apps/: CMakeLists.txt
docs/: CMakeLists.txt  README.aff3ct_codes
examples/: 10_CCSDSframes_Before_LDPC_Encode  64_BIT_ASM_CCSDS_LDPC  Before_LDPC_Decode_Sink  CCSDS_BPSK_LDPC_Simulation_TX_RCV.grc  CCSDS_LDPC_SINK  DVBS2_LDPC_Simulation_Encode_Decode.grc  LDPC_TX_RCV.py  SQPSK_LDPC_OrionMOON.grc  SQPSK_LDPC_RateOneHalf.grc  SQPSK_LDPC_RateOneHalf_Orion_RCVonly.grc  SQPSK_ldpc.py  Test_LDPC_Sink  dvbs2_pl_sync.py  orion_oqpsk.py  sqpsk_LDPC.py
grc/: CMakeLists.txt  aff3ct_codes_CCSDS_Pseudo_Randomizer.block.yml  aff3ct_codes_Frame_Extract2.block.yml  aff3ct_codes_Frame_ExtractOQPSK.block.yml  aff3ct_codes_Resolve_Phase2.block.yml  aff3ct_codes_Tag_FrameASM64_ff.block.yml  aff3ct_codes_ccsds_ldpc_decoder.block.yml  aff3ct_codes_dvbs2_ldpc_decoder.block.yml
lib/: CCSDS_Pseudo_Randomizer_impl.cc  CCSDS_Pseudo_Randomizer_impl.h  CMakeLists.txt  Frame_Extract2_impl.cc  Frame_Extract2_impl.h  Frame_ExtractOQPSK_impl.cc  Frame_ExtractOQPSK_impl.h  Resolve_Phase2_impl.cc  Resolve_Phase2_impl.h  Tag_FrameASM64_ff_impl.cc  Tag_FrameASM64_ff_impl.h  ccsds_ldpc_decoder_impl.cc  ccsds_ldpc_decoder_impl.h  (+2 more)
python/aff3ct_codes/bindings/: CCSDS_Pseudo_Randomizer_python.cc  CMakeLists.txt  Frame_ExtractOQPSK_python.cc  ccsds_ldpc_decoder_python.cc  dvbs2_ldpc_decoder_python.cc  python_bindings.cc
python/aff3ct_codes/bindings/docstrings/: CCSDS_Pseudo_Randomizer_pydoc_template.h  Frame_Extract2_pydoc_template.h  Tag_FrameASM64_ff_pydoc_template.h  ccsds_ldpc_decoder_pydoc_template.h  dvbs2_ldpc_decoder_pydoc_template.h
(+56 files in other folders)
